# 37_1_calc_qt

./: CMakeLists.txt  README.md  calc.ui  calcmainwindow.h  main.cpp
